increased the font size of host card

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <h3>Exclusive Interviews</h3>
       <p>
         Get unprecedented access to industry titans, startup founders, and
-        tech visionaries. Exclusive conversations you won't find anywhere else,diving deep into their journeya,failure, and success strategies.
+        tech visionaries. Exclusive conversations you won't find anywhere else,diving deep into their journey,failure, and success strategies.
       </p></div>
       
   <div class="rich"><img src="./resource.png" height="25px"width="25px">
